objects/AnalysisInfo__c.object
<CustomObject>
    <description>The object that holds all data from the Field Analysis</description>
    <fields>
        <fullName>Date_Run__c</fullName>
        <label>Date Run</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Result_Page__c</fullName>
        <label>Result Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TotalNumberofObjects__c</fullName>
        <description>A helper field used to determine the total number of objects this AnalysisInfo__c is running on.</description>
        <label>Total Number of Objects</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isFinished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFinished</label>
        <type>Checkbox</type>
    </fields>
    <label>AnalysisInfo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Date_Run__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AnalysisInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AnalysisInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>